move allowImportingTsExtensions into compilerOptions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
 		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./*"]
-		}
+		},
+		"allowImportingTsExtensions": true
 	},
 	"include": [
 		"next-env.d.ts",
@@ -31,6 +32,5 @@
 		"app/lib/placeholder-data.ts",
 		"scripts/seed.js"
 	],
-	"exclude": ["node_modules"],
-	"allowImportingTsExtensions": true
+	"exclude": ["node_modules"]
 }
